criando uma introducao bonita com css

--- a/Paladina/avancando-norte.html
+++ b/Paladina/avancando-norte.html
@@ -20,7 +20,7 @@
             <strong class="pergunta-paladina">O que você fará diante dessa situação?</strong></h2>
 
             <a href="ajudar-patrulheiro.html"><p class="escolha">AJUDAR O PATRULHEIRO (Dedicar alguns minutos conjurando uma magia de cura para aliviar o sofrimento dele e fortalecê-lo novamente para que ele possa lutar ao seu lado.)</p></a>
-            <a href="#"><p class="escolha">IGNORAR O PATRULHEIRO (Oferecer uma poção de cura ao patrulheiro e continuar seguindo direto ao encontro do dragão pois você sabe que ele está próximo e abaixar a guarda pode arriscar a falha da missão inteira.)</p></a>
+            <a href="ignorando-o-patrulheiro.html"><p class="escolha">IGNORAR O PATRULHEIRO (Oferecer uma poção de cura ao patrulheiro e continuar seguindo direto ao encontro do dragão pois você sabe que ele está próximo e abaixar a guarda pode arriscar a falha da missão inteira.)</p></a>
         </div>
     </div> 
 </body>
