--- a/index.html
+++ b/index.html
@@ -3,24 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulação de currículo</title>
+    <title>Uma aventura épica</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
-<body style="width: 70%; margin: auto;">
-    <h1 style="text-align: center; font-size: 3.5rem;">Colinhas de HTML</h1>
-    <h2>A tag h2, forma o subtítulo de uma página, ele é menor que o h1 e maior que os outros hs, inclusive é a que estamos usando aqui.</h2>
-    <h3>Através da tag h1 você pode criar títulos de uma página, por boa prática o ideal é a página ter apenas um h1, estamos utilizando dois h1 nessa página, o primeiro é o "Colinhas de HTML" e o segundo está logo abaixo desse texto. Mas se os dois são h1 porque estão diferentes? Basicamente eu inseri um código em CSS que manda o texto do h1 de cima ter o tamanho da fonte um pouco maior, isso é chamado de estilização Inline. Pra finalizar, esse texto aqui foi escrito usando h3</h2>
-    <h1>Agora chega de brincar com os hs, vamos jogar um jogo de escolhas? Estou animado!</h1>
-    <h2>O nome do jogo é: <strong style="font-size: larger; font-weight: bolder;">O Dragão</strong></h2>
-    <h3>Regras do jogo:</h3>
-    <ul>
-        <li>Depois que você fez uma escolha não pode voltar atrás. Se fizer isso saiba que está trapaçeando!</li>
-        <li>O jogo possui finais diferentes, então escolha sabiamente.</li>
-    </ul>
+<body>
 
-    <h2>Começando, primeiramente escolha seu personagem inicial:</h2>
-    <a href="Paladina/Intro.html" target="_self">1- An Nastácia, a Paladina</a><br><br>
-    <a href="#">2- León Ardo, o Mago (Em breve) </a><br><br>
-    <a href="#">3- José Phina, o Ladino (Em breve)</a><br><br>
-    <a href="#">4- Marcia Polo, a Arqueira (Em breve)</a><br><br>
+    <header class="cabecalho">
+        <h1 style="text-align: center; font-size: 3.5rem;">Aventuras Épicas</h1>
+        <nav>
+            <a href="#">Sobre</a>
+            <a href="#">Personagens</a>
+            <a href="#">Contato</a>
+        </nav>
+    </header>
+
+    <main>
+        <section class="intro">
+            <div>
+                <h2>Esse projeto foi criado para estudos de HTML, CSS e JavaScript, e se trata de uma coletânea de jogos de escolha aonde você decide o rumo das histórias. Com o passar do tempo quero ir aprimorando trazendo mais histórias e implementando um design e responsividade melhores. Por enquanto só a apenas uma história liberada, mas em breve estarei implementando outras.</h2>
+            </div>
+            <div>
+               <h3>Regras do jogo:</h3>
+                <ul class="regras">
+                    <li>Depois que você fez uma escolha não pode voltar atrás. Se fizer isso saiba que está trapaçeando!</li>
+                    <li>O jogo possui finais diferentes, então escolha sabiamente.</li>
+                </ul> 
+            </div>
+
+            <div>
+               <h2 class="escolha-personagem">Começando, primeiramente escolha seu personagem inicial:</h2>
+                <a href="Paladina/Intro.html" target="_self" class="personagem">An Nastácia, a Paladina</a><br><br>
+                <a href="#" class="personagem">León Ardo, o Mago (Em breve) </a><br><br>
+                <a href="#" class="personagem">José Phina, o Ladino (Em breve)</a><br><br>
+                <a href="#" class="personagem">Marcia Polo, a Arqueira (Em breve)</a><br><br> 
+            </div>
+        </section>
+
+        <aside>
+            <img src="assets/books.jpeg" alt="Imagens de uma carta antiga, uma pena e um livro">
+        </aside>
+        
+    </main>
+    
+
+    <footer>
+        <p>Criado por Weida Viana</p>
+    </footer>
 </body>
 </html>
